# dcss-api

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md
.github/workflows/: CI.yml  build-and-test.yml  python-publish.yml  quarto-publish.yml
crawl-config/: config.py  init-player.sh
dcss-api/: Cargo.toml  README.md
dcss-api-docs/: _quarto.yml  index.qmd
dcss-api-python/: Cargo.toml  README.md
dcss-api-python/examples/: 1_basic.py  3_cookies.py  4_blocking_error.py  5_bot_core.py  6_scenario.py
dcss-api-python/python/: 4_blocking_error.py
dcss-api-python/src/: lib.rs
dcss-api-python/tests/: connect_test.py  login_test.py  rc_file_test.py  scenario_test.py  start_game_test.py  versions_test.py
dcss-api/examples/: 0_setup.rs  1_basic.rs  2_rc_file.rs  3_cookies.rs  4_blocking_error.rs  5_bot_core.rs
dcss-api/src/: lib.rs  play.rs
dcss-api/tests/: rc_file_test.rs  start_game_test.rs  versions_test.rs
dcss-data/: Cargo.toml  README.md
dcss-data/src/: abilities.rs  common.rs  inventory.rs  items.rs  lib.rs  log.rs  menus.rs  monsters.rs  pickup.rs  player.rs  skills.rs  tiles.rs
dcss-data/src/items/: armours.rs  jewellery.rs  missiles.rs  potions.rs  scrolls.rs  staves.rs  wands.rs  weapons.rs
dcss-data/tests/: common.rs  test-tiles.rs
dcss-data/tests/scenarios/tiles/: box_7x7.yaml  box_7x7_monster.yaml
dcss-scenario-builder/: Cargo.toml  README.md  todo
dcss-scenario-builder/examples/: 1_basic.rs  2_readme.rs
dcss-scenario-builder/scenarios/: branches.yaml  features.yaml  items.yaml
dcss-scenario-builder/scenarios/docs/: fov.yaml  readme.yaml
dcss-scenario-builder/scenarios/simple/: box.yaml
dcss-scenario-builder/src/: common.rs  lib.rs  lua_builder.rs  scenario_errors.rs  wizmode.rs
dcss-scenario-builder/tests/: common.rs  test_incorrect.rs  test_wizmode.rs  wizmode_test.rs
dcss-scenario-builder/tests/test_scenarios/: no_char.yaml  simple_map.yaml  too_long.yaml  too_wide.yaml
docs/: 0. index.md  1. connection.md  2. send_receive.md  3. lobby.md  3. login.md  4. starting_game.md  connection.md  login_and_lobby.md
examples/: 1_basic.rs  2_rc_file.rs  5_bot_core.rs  basic.rs  blocking_error.rs  cookie.rs  get_playable_games.rs  rc_file.rs  start_game.rs
python/: 0_setup.py  1_basic.py  2_rc_file.py  3_cookies.py  4_blocking_error.py  5_bot_core.py  basic.py  blocking_error.py
python/tests/: connect_test.py  login_test.py  rc_file_test.py  start_game_test.py  versions_test.py
src/: api_errors.rs  common.rs  communication.rs  deflate.rs  lib.rs  lobby.rs  play.rs  python_module.rs
tests/: connect_test.rs  login_test.rs  rc_file_test.rs  start_game_test.rs
tests/config/: config.py
