[package]
name = "dcss-api"
version = "0.0.1"
edition = "2021"

[lib]
name = "dcss_api"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
tungstenite = { version = "0.19", features = ["native-tls"] }
url = "2.3"
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.18", features = ["extension-module"] }