[package]
name = "dcss-api"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = "A DCSS Webtile API for Rust."
repository = "https://github.com/EricFecteau/dcss-api/"
readme = "README.md"

[lib]
name = "dcss_api"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
tungstenite = { version = "0.20", features = ["native-tls-vendored"] }
url = "2.3"
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.19", features = ["extension-module"] }