[package]
name = "dcss-api"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "A DCSS Webtile API for Rust & Python."
repository = "https://github.com/EricFecteau/dcss-api/"
readme = "README.md"

[lib]
name = "dcss_api"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
tungstenite = { version = "0.26", features = ["native-tls-vendored"] }
serde_json = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.23", features = ["extension-module"] }