[package]
authors = ["Eric Fecteau <eric.m.fecteau@gmail.com>"]
name = "dcss-api-python"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
description = "A DCSS Webtile API for Rust & Python."
repository = "https://github.com/EricFecteau/dcss-api/"
readme = "README.md"

[lib]
name = "dcss_api"
crate-type = ["cdylib"]
doctest = false

[dependencies]
dcss-api = { path = "../dcss-api" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1.0"