[package]
authors = ["Eric Fecteau <eric.m.fecteau@gmail.com>"]
name = "dcss-api"
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"
description = "A DCSS Webtile API for Rust."
repository = "https://github.com/EricFecteau/dcss-api/"
readme = "README.md"

[lib]
doctest = false

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
tungstenite = { version = "0.26", features = ["native-tls-vendored"] }
serde_json = "1.0"
thiserror = "2.0"