[package]
name = "dcss-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dcss_data"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
serde_json = "1"
rustc-hash = "2.0"
regex = "1.10"

[dev-dependencies]
dcss-api = "0.2"
dcss-scenario-builder = "0.2"