[package]
authors = ["Eric Fecteau <eric.m.fecteau@gmail.com>"]
name = "dcss-scenario-builder"
version = "0.2.2"
edition = "2021"
license = "MPL-2.0"
description = "A scenario builder for DCSS Webtile."
repository = "https://github.com/EricFecteau/dcss-api/"
readme = "README.md"

[lib]
doctest = false

[dependencies]
dcss-api = "0.2"
rustc-hash = "2"
serde_yaml = "0.9"
itertools = "0.14"
thiserror = "2.0"
